--- a/index.html
+++ b/index.html
@@ -31,12 +31,24 @@
     <div id="wrapper">
         <!-- Nav -->
         <nav id="nav">
-            <a href="#me" class="icon fa-home active"><span>Home</span></a>
-            <a href="#work" class="icon fa-folder"><span>Work</span></a>
-            <a href="#projects" class="icon fa-desktop"><span>Projects</span></a>
-            <a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
-            <a href="Sharaf_Umang.pdf" target="_blank" class="icon fa-file-text-o"><span>Resume</span></a>
-            <a href="https://www.linkedin.com/in/umangs94" target="_blank" class="icon fa-linkedin"><span>LinkedIn</span></a>
+            <a href="#me" class="icon fa-home active">
+                <span>Home</span>
+            </a>
+            <a href="#work" class="icon fa-folder">
+                <span>Work</span>
+            </a>
+            <a href="#projects" class="icon fa-desktop">
+                <span>Projects</span>
+            </a>
+            <a href="#contact" class="icon fa-envelope">
+                <span>Contact</span>
+            </a>
+            <a href="Sharaf_Umang.pdf" target="_blank" class="icon fa-file-text-o">
+                <span>Resume</span>
+            </a>
+            <a href="https://www.linkedin.com/in/umangs94" target="_blank" class="icon fa-linkedin">
+                <span>LinkedIn</span>
+            </a>
         </nav>
 
         <!-- Main -->
@@ -45,7 +57,9 @@
             <!-- Me -->
             <article id="me" style="text-align:justify" class="panel">
                 <header>
-                    <h1><a href="https://www.linkedin.com/in/umangs94" target="_blank">Umang Sharaf</a></h1>
+                    <h1>
+                        <a href="https://www.linkedin.com/in/umangs94" target="_blank">Umang Sharaf</a>
+                    </h1>
                     <p>
                         <a href="http://www.cse.osu.edu/" target="_blank">
                             Computer Science & Engineering
@@ -53,7 +67,8 @@
                         <br />
                         <a href="http://www.stat.osu.edu/" target="_blank">
                             Minors in Statistics
-                        </a>& <a href="http://www.fisher.osu.edu/" target="_blank">
+                        </a>&
+                        <a href="http://www.fisher.osu.edu/" target="_blank">
                             Business
                         </a>
                         <br />
@@ -63,7 +78,9 @@
                     </p>
                 </header>
                 <a href="#work" class="jumplink pic">
-                    <span class="arrow icon fa-chevron-right"><span>See my work</span></span>
+                    <span class="arrow icon fa-chevron-right">
+                        <span>See my work</span>
+                    </span>
                     <img src="images/me.jpg" alt="me!" />
                 </a>
             </article>
@@ -78,7 +95,8 @@
                     </header>
                     Made several code-behind improvements to the internal web-app that I worked on in 2014
                     <br /> New features will significantly simplify and automate tasks for other team members
-                    <br /> Used C# to internalize SQL scripts into an ASP.NET application while working with other team members using Visual Studio
+                    <br /> Used C# to internalize SQL scripts into an ASP.NET application while working with other team members
+                    using Visual Studio
                     <br />
                     <br />
                 </a>
@@ -90,7 +108,8 @@
                     </header>
                     Overhauled an internal web-app which is used to manage a consumer-facing website
                     <br /> Improvements will allow greater productivity due to implementation of requested user stories
-                    <br /> Made extensive use of ASP.NET, SQL, HTML5, and JavaScript while collaborating with other team members using Team Foundation Server in Visual Studio
+                    <br /> Made extensive use of ASP.NET, SQL, HTML5, and JavaScript while collaborating with other team members
+                    using Team Foundation Server in Visual Studio
                     <br />
                     <br />
                 </a>
@@ -139,7 +158,9 @@
                 </header>
                 <header>
                     <h2>Won ‘Best Lifesaving Hack’ at Qualcomm’s intern hackathon</h2>
-                    <h4>Created an Android app to visualize sound to assist the hearing impaired using Vuforia for Augmented Reality</h4>
+                    <h4>Created an Android app to visualize sound to assist the hearing impaired using Vuforia for Augmented
+                        Reality
+                    </h4>
                     <p>Summer 2015, Qualcomm Inc</p>
                 </header>
                 <img class="image centered web" src="images/qualcomm_hackathon.jpg" alt="'Best Lifesaving Hack’'">
@@ -170,7 +191,10 @@
                     <header>
                         <h2>Contact Me</h2>
                     </header>
-                    <p>I'm interested in Computer Science positions starting May 2016 and am open to relocation.</p>
+                    <p>I’m looking forward to studying Data Science at a graduate school next Fall. I recently created an iOS
+                        app called <a href="https://itunes.apple.com/app/apple-store/id1232956137" target="_blank">Drinks Tracker</a>.</p>
+
+                    <p>Currently, I work at OCLC as a Software Developer in the Global Technologies division.</p>
                 </a>
             </article>
 
@@ -179,7 +203,8 @@
         <!-- Footer -->
         <div id="footer">
             <ul class="copyright">
-                <li>Design: <a href="http://html5up.net" target="_blank">HTML5 UP</a>
+                <li>Design:
+                    <a href="http://html5up.net" target="_blank">HTML5 UP</a>
                 </li>
             </ul>
         </div>
