--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="#contact" class="icon fa-envelope">
                 <span>Contact</span>
             </a>
-            <a href="Sharaf_Umang.pdf" target="_blank" class="icon fa-file-text-o">
+            <a href="https://drive.google.com/file/d/0B9tCVzlQTwJqT0RLZ2RTLVVQZUk/view?usp=sharing" target="_blank" class="icon fa-file-text-o">
                 <span>Resume</span>
             </a>
             <a href="https://www.linkedin.com/in/umangs94" target="_blank" class="icon fa-linkedin">
