--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             <a href="#work" class="icon fa-folder">
                 <span>Work</span>
             </a>
+            <a href="#app" class="icon fa-mobile">
+                <span>App</span>
+            </a>
             <a href="#projects" class="icon fa-desktop">
                 <span>Projects</span>
             </a>
@@ -140,6 +143,18 @@
                 </a>
             </article>
 
+            <!-- App -->
+            <article id="app" class="panel">
+                <a href="https://itunes.apple.com/app/apple-store/id1232956137">
+                    <header>
+                        <h2>Drinks Tracker</h2>
+                    </header>
+                    <p>I recently created an iOS app called
+                        <a href="https://itunes.apple.com/app/apple-store/id1232956137" target="_blank">Drinks Tracker</a>.
+                    </p>
+                </a>
+            </article>
+
             <!-- Projects -->
             <article id="projects" class="panel">
                 <header>
@@ -189,7 +204,8 @@
                         <h2>Contact Me</h2>
                     </header>
                     <p>I’m looking forward to studying Data Science at a graduate school next Fall. I recently created an iOS
-                        app called <a href="https://itunes.apple.com/app/apple-store/id1232956137" target="_blank">Drinks Tracker</a>.</p>
+                        app called
+                        <a href="https://itunes.apple.com/app/apple-store/id1232956137" target="_blank">Drinks Tracker</a>.</p>
 
                     <p>Currently, I work at OCLC as a Software Developer in the Global Technologies division.</p>
                 </a>
