--- a/index.html
+++ b/index.html
@@ -64,20 +64,26 @@
                         <a href="https://www.linkedin.com/in/umangs94" target="_blank">Umang Sharaf</a>
                     </h1>
                     <p>
-                        <a href="http://www.cse.osu.edu/" target="_blank">
-                            Computer Science & Engineering
-                        </a>
+                        <a href="#work">Software Developer</a>
                         <br />
-                        <a href="http://www.stat.osu.edu/" target="_blank">
-                            Minors in Statistics
-                        </a>&
-                        <a href="http://www.fisher.osu.edu/" target="_blank">
-                            Business
-                        </a>
+                        <a href="#app">iOS App Developer</a>
                         <br />
                         <a href="http://www.osu.edu/" target="_blank">
                             The Ohio State University - 2016
                         </a>
+                        <br>
+                        <span style="font-size: 15pt">
+                            <a href="http://www.cse.osu.edu/" target="_blank">
+                                Computer Science & Engineering
+                            </a>
+                            with minors in
+                            <a href="http://www.stat.osu.edu/" target="_blank">
+                                Statistics
+                            </a>&
+                            <a href="http://www.fisher.osu.edu/" target="_blank">
+                                Business
+                            </a>
+                        </span>
                     </p>
                 </header>
                 <a href="#work" class="jumplink pic">
