--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                         <a href="https://www.linkedin.com/in/umangs94" target="_blank">Umang Sharaf</a>
                     </h1>
                     <p>
-                        <a href="#work">Software Developer</a>
+                        <a href="https://umangs94.github.io/#work">Software Developer</a>
                         <br />
-                        <a href="#app">iOS App Developer</a>
+                        <a href="https://umangs94.github.io/#app">iOS App Developer</a>
                         <br />
                         <a href="http://www.osu.edu/" target="_blank">
                             The Ohio State University - 2016
