--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <a href="#me" class="icon fa-home active">
                 <span>Home</span>
             </a>
-            <a href="#work" class="icon fa-folder">
+            <a href="#work" id="link_work" class="icon fa-folder">
                 <span>Work</span>
             </a>
-            <a href="#app" class="icon fa-mobile">
+            <a href="#app" id="link_app" class="icon fa-mobile">
                 <span>App</span>
             </a>
             <a href="#projects" class="icon fa-desktop">
@@ -64,9 +64,9 @@
                         <a href="https://www.linkedin.com/in/umangs94" target="_blank">Umang Sharaf</a>
                     </h1>
                     <p>
-                        <a href="https://umangs94.github.io/#work">Software Developer</a>
+                        <a style="cursor:pointer" onclick="$('#link_work').click()">Software Developer</a>
                         <br />
-                        <a href="https://umangs94.github.io/#app">iOS App Developer</a>
+                        <a  style="cursor:pointer" onclick="$('#link_app').click()">iOS App Developer</a>
                         <br />
                         <a href="http://www.osu.edu/" target="_blank">
                             The Ohio State University - 2016
