app stuff and formatting

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <p>
                         <a style="cursor:pointer" onclick="$('#link_work').click()">Software Developer</a>
                         <br />
-                        <a  style="cursor:pointer" onclick="$('#link_app').click()">iOS App Developer</a>
+                        <a style="cursor:pointer" onclick="$('#link_app').click()">iOS App Developer</a>
                         <br />
                         <a href="http://www.osu.edu/" target="_blank">
                             The Ohio State University - 2016
@@ -93,76 +93,105 @@
 
             <!-- Work -->
             <article id="work" class="panel">
-                <a style="text-decoration:none" href="https://www.healthycircles.com" target="_blank">
-                    <header>
-                        <h2>Qualcomm Life</h2>
-                        <h3 style="text-transform:uppercase">Interim Technology Intern</h3>
-                        <p>Summer 2015, San Diego, CA</p>
-                    </header>
-                    Made several code-behind improvements to the internal web-app that I worked on in 2014
-                    <br /> New features will significantly simplify and automate tasks for other team members
-                    <br /> Used C# to internalize SQL scripts into an ASP.NET application while working with other team members
-                    using Visual Studio
-                    <br />
-                    <br />
-                </a>
-                <a style="text-decoration:none" href="https://www.healthycircles.com" target="_blank">
-                    <header>
-                        <h2>Qualcomm Life</h2>
-                        <h3 style="text-transform:uppercase">Interim Technology Intern</h3>
-                        <p>Summer 2014, San Diego, CA</p>
-                    </header>
-                    Overhauled an internal web-app which is used to manage a consumer-facing website
-                    <br /> Improvements will allow greater productivity due to implementation of requested user stories
-                    <br /> Made extensive use of ASP.NET, SQL, HTML5, and JavaScript while collaborating with other team members
-                    using Team Foundation Server in Visual Studio
-                    <br />
-                    <br />
-                </a>
-                <a href="https://cse.osu.edu/computing-services/contact" target="_blank">
-                    <header>
-                        <h2>The Ohio State University</h2>
-                        <h3 style="text-transform:uppercase">CSE Help Desk Operator</h3>
-                        <p>February 2014 - May 2016</p>
-                    </header>
+                <header>
+                    <h2>Online Computer Library Center (OCLC)</h2>
+                    <h3 style="text-transform:uppercase">Software Developer</h3>
+                    <p>July 2016 - present, Columbus, OH</p>
+                </header>
+                Improved and innovated on several Java projects used internally and externally for purposes ranging from data retrieval,
+                transformation, and organization to security
+                <br />Supported a multi-million dollar international contract by writing utilities that enabled our team to internationalize
+                a webapp in 20+ languages
+                <br />Optimized database handling and functionality for compliance with privacy requirements while updating legacy
+                projects to modern technologies such as Spring and SQL
+                <br />Achieved our corporate strategy goals by enhancing OAuth authentication services used by OCLC’s enterprise
+                business partners to offer better support of mobile application authentication
+                <br />Worked with the Operations team to deploy our webapps successfully in the Production environment
 
-                    Reply to any queries sent to help@cse.ohio-state.edu diligently and in a timely manner
-                    <br /> Help students, faculty and professors with their queries and account issues
-                    <br /> Print posters for graduate students
-                    <br /> Ensure that all the CSE printers (~20) are working perfectly with no paper and ink issues
-                    <br />
-                    <br />
-                </a>
-                <a href="http://www.icicipruamc.com/" target="_blank">
-                    <header>
-                        <h2>ICICI Prudential AMC Ltd.</h2>
-                        <h3 style="text-transform:uppercase">IT Intern</h3>
-                        <p>Summer 2010, Mumbai, India</p>
-                    </header>
+                <header>
+                    <h2>Qualcomm Life</h2>
+                    <h3 style="text-transform:uppercase">Interim Engineering Intern</h3>
+                    <p>May - July 2015, San Diego, CA</p>
+                </header>
+                Improved the webapp that I worked on in 2014 based on feedback from the Operations team
+                <br />Created new features to significantly simplify and automate tasks for other team members
+                <br />Used C# to internalize SQL scripts into an ASP.NET application while working together using Visual Studio
 
-                    Gained experience programming in work environment
-                    <br /> Programmed in ASP.NET and C# primarily
-                    <br /> Created websites for inputting and recalling user details
-                    <br /> Worked in Microsoft Access to create databases to store user details
-                    <br />
-                    <br />
-                </a>
+                <header>
+                    <h2>Qualcomm Life</h2>
+                    <h3 style="text-transform:uppercase">Interim Technology Intern</h3>
+                    <p>May - August 2014, San Diego, CA</p>
+                </header>
+                Overhauled an internal web-app that is used to manage a consumer-facing website
+                <br /> Resolved and implemented requested user stories to increase operational productivity
+                <br /> Made extensive use of ASP.NET, SQL, HTML5, and JavaScript while collaborating with other team members using
+                Team Foundation Server in Visual Studio
+
+                <header>
+                    <h2>The Ohio State University</h2>
+                    <h3 style="text-transform:uppercase">CSE Help Desk Operator</h3>
+                    <p>February 2014 - May 2016, Columbus, OH</p>
+                </header>
+                Reply to any queries sent to help@cse.ohio-state.edu diligently and in a timely manner
+                <br /> Help students, faculty and professors with their queries and account issues
+                <br /> Print posters for graduate students
+                <br /> Ensure that all the CSE printers (~20) are working perfectly with no paper and ink issues
+
+                <header>
+                    <h2>ICICI Prudential AMC Ltd.</h2>
+                    <h3 style="text-transform:uppercase">IT Intern</h3>
+                    <p>Summer 2010, Mumbai, India</p>
+                </header>
+                Gained experience programming in work environment
+                <br /> Primarily programmed in ASP.NET and C#
+                <br /> Created websites for inputting and recalling user details
+                <br /> Worked in Microsoft Access to create databases to store user details
             </article>
 
             <!-- App -->
             <article id="app" class="panel">
                 <a href="https://itunes.apple.com/app/apple-store/id1232956137">
                     <header>
+                        <img class="image centered web" style="max-width:200px" src="images/drinks_tracker.png" alt="Drinks Tracker">
                         <h2>Drinks Tracker</h2>
                     </header>
-                    <p>I recently created an iOS app called
-                        <a href="https://itunes.apple.com/app/apple-store/id1232956137" target="_blank">Drinks Tracker</a>.
-                    </p>
+                    <p>Drinks Tracker allows you to search a huge list of nearly 4000 drinks and easily add drinks to track
+                        your Blood Alcohol Content (BAC) percentage. </p>
+                    <br />
+                    <h4>Features</h4>
+                    <ul>
+                        <li>
+                            Search and easily add from nearly 4000 drinks
+                        </li>
+                        <li>Easily add custom drinks in a few taps (be sure to suggest them to the developer so that they can
+                            be added to the full list!)</li>
+                        <li>Get notifications when your BAC has reached 0.08% and 0%</li>
+                        <li>Customize your profile and choose between using the BAC and EBAC formula</li>
+                    </ul>
+
+                    <img class="image web" style="max-width:200px" src="images/dt.jpg" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/dt-2.jpg" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/dt-3.jpg" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/dt-4.jpg" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/dt-5.jpg" alt="Drinks Tracker">                    
                 </a>
             </article>
 
             <!-- Projects -->
             <article id="projects" class="panel">
+                <a href="https://itunes.apple.com/app/apple-store/id1232956137" target="_blank">
+                    <header>
+                        <img class="image centered web" style="max-width:200px" src="images/drinks_tracker.png" alt="Drinks Tracker">
+                        <h2>Drinks Tracker</h2>
+                        <h4>iOS App</h4>
+                        <p>Spring 2017</p>
+                    </header>
+                </a>
+                <header>
+                    <h2>Machine Learning by Stanford University - Coursera</h2>
+                    <h4>Taught by Andrew Ng, Co-founder, Coursera and Adjunct Professor, Stanford University</h4>
+                    <p>Spring 2017</p>
+                </header>
                 <header>
                     <h2>Voice Analytics Capstone project</h2>
                     <h4>for PureCloud by Interactive Intelligence</h4>
@@ -171,31 +200,29 @@
                 </header>
                 <header>
                     <h2>Several Android apps</h2>
-                    <h4>Worked with Twitter, Google SafeSearch API and Vuforia SDK</h4>
+                    <h4>Worked with Twitter, Google Calendar, and Google SafeSearch APIs</h4>
                     <p>2015 - 2016, The Ohio State University</p>
                 </header>
                 <header>
+                    <img class="image centered web" src="images/qualcomm_hackathon.jpg" alt="'Best Lifesaving Hack’'">
                     <h2>Won ‘Best Lifesaving Hack’ at Qualcomm’s intern hackathon</h2>
                     <h4>Created an Android app to visualize sound to assist the hearing impaired using Vuforia for Augmented
                         Reality
                     </h4>
-                    <p>Summer 2015, Qualcomm Inc</p>
+                    <p>Summer 2015, Qualcomm</p>
                 </header>
-                <img class="image centered web" src="images/qualcomm_hackathon.jpg" alt="'Best Lifesaving Hack’'">
-                <a href="http://www.isaosu.com/" target="_blank">
-                    <header>
-                        <h2>Indian Students Association</h2>
-                        <h3 style="text-transform:uppercase">Chief of Staff and Webmaster</h3>
-                        <p>2013 - present, The Ohio State University</p>
-                    </header>
-                    <img class="image centered web" src="images/isaosu.jpg" alt="isaosu.com">
-                </a>
                 <header>
+                    <img class="image centered web" src="images/isaosu.jpg" alt="isaosu.com">
+                    <h2>Indian Students Association</h2>
+                    <h3 style="text-transform:uppercase">Chief of Staff and Webmaster</h3>
+                    <p>2013 - 2016, The Ohio State University</p>
+                </header>
+                <header>
+                    <img class="image centered web" src="images/uncakd.jpg" alt="uncakd.org">
                     <h2>Aaj Ka Dhamaka</h2>
                     <h3 style="text-transform:uppercase">Webmaster</h3>
-                    <p>August – November 2013, University of North Carolina</p>
+                    <p>Fall 2013, University of North Carolina</p>
                 </header>
-                <img class="image centered web" src="images/uncakd.jpg" alt="uncakd.org">
                 <header>
                     <h2>Advanced Energy Vehicle project</h2>
                     <h4>Model Monorail</h4>
