--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <span>Work</span>
             </a>
             <a href="#app" id="link_app" class="icon fa-mobile">
-                <span>App</span>
+                <span>Drinks Tracker</span>
             </a>
             <a href="#projects" class="icon fa-desktop">
                 <span>Projects</span>
