--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <img class="image web" style="max-width:200px" src="images/dt-2.jpg" alt="Drinks Tracker">
                     <img class="image web" style="max-width:200px" src="images/dt-3.jpg" alt="Drinks Tracker">
                     <img class="image web" style="max-width:200px" src="images/dt-4.jpg" alt="Drinks Tracker">
-                    <img class="image web" style="max-width:200px" src="images/dt-5.jpg" alt="Drinks Tracker">                    
+                    <img class="image web" style="max-width:200px" src="images/dt-5.jpg" alt="Drinks Tracker">
                 </a>
             </article>
 
@@ -193,9 +193,19 @@
                     <p>Spring 2017</p>
                 </header>
                 <header>
+                    <h2>Data mined a large collection of Reuters articles in Python</h2>
+                    <h4>Learned and performed textual analysis to summarize the articles</h4>
+                    <h4>Used Beautiful Soup 4 and scikit-learn to implement several clustering and classification algorithms
+                        such as DBSCAN, Hierarchical Clustering, Naïve-Bayesian, and K-Nearest Neighbors</h4>
+                    <h4>Calculated Jaccard Similarity scores and Mean Squared Error to accurately create association rules</h4>
+                    <p>Spring 2016, The Ohio State University</p>
+                </header>
+                <header>
                     <h2>Voice Analytics Capstone project</h2>
                     <h4>for PureCloud by Interactive Intelligence</h4>
-                    <h4>Working with IBM BlueMix, JavaScript, and Bootstrap</h4>
+                    <h4>Performed tokenization using IBM BlueMix after using Google Cloud Speech for voice recognition</h4>
+                    <h4>Analyzed the speech input to automatically create meetings in Google Calendar</h4>
+                    <h4>Worked with the IBM BlueMix, Google Cloud Speech, and Google Calendar APIs along with AWS</h4>
                     <p>Spring 2016, The Ohio State University</p>
                 </header>
                 <header>
