Added campaign to app link

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
             <!-- App -->
             <article id="app" class="panel">
-                <a href="https://itunes.apple.com/app/apple-store/id1232956137">
+                <a href="https://itunes.apple.com/app/apple-store/id1232956137?pt=118652912&ct=website&mt=8">
                     <header>
                         <img class="image centered web" style="max-width:200px" src="images/drinks_tracker.png" alt="Drinks Tracker">
                         <h2>Drinks Tracker</h2>
@@ -179,7 +179,7 @@
 
             <!-- Projects -->
             <article id="projects" class="panel">
-                <a href="https://itunes.apple.com/app/apple-store/id1232956137" target="_blank">
+                <a href="https://itunes.apple.com/app/apple-store/id1232956137?pt=118652912&ct=website&mt=8" target="_blank">
                     <header>
                         <img class="image centered web" style="max-width:200px" src="images/drinks_tracker.png" alt="Drinks Tracker">
                         <h2>Drinks Tracker</h2>
@@ -248,7 +248,7 @@
                     </header>
                     <p>I’m looking forward to studying Data Science at a graduate school next Fall. I recently created an iOS
                         app called
-                        <a href="https://itunes.apple.com/app/apple-store/id1232956137" target="_blank">Drinks Tracker</a>.</p>
+                        <a href="https://itunes.apple.com/app/apple-store/id1232956137?pt=118652912&ct=website&mt=8" target="_blank">Drinks Tracker</a>.</p>
 
                     <p>Currently, I work at OCLC as a Software Developer in the Global Technologies division.</p>
                 </a>
