Added download buttons

--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
                     </header>
                     <p>Drinks Tracker allows you to search a huge list of nearly 4000 drinks and easily add drinks to track
                         your Blood Alcohol Content (BAC) percentage. </p>
+                    <a href="https://itunes.apple.com/app/apple-store/id1232956137?pt=118652912&ct=website&mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg) no-repeat;width:135px;height:40px;background-size:contain;"></a>
                     <h3>Installed by 2,900+ users with 52,000+ impressions</h3>
                     <br />
                     <img class="image web" style="max-width:200px" src="images/dt.jpg" alt="Drinks Tracker">
@@ -186,6 +187,7 @@
                         <img class="image centered web" style="max-width:200px" src="images/drinks_tracker.png" alt="Drinks Tracker">
                         <h2>Drinks Tracker</h2>
                         <h4>iOS App</h4>
+                        <a href="https://itunes.apple.com/app/apple-store/id1232956137?pt=118652912&ct=website&mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg) no-repeat;width:135px;height:40px;background-size:contain;"></a>
                         <p>Spring 2017</p>
                     </header>
                 </a>
