Updated app page with new screenshots and features

--- a/index.html
+++ b/index.html
@@ -155,28 +155,32 @@
                         <img class="image centered web" style="max-width:200px" src="images/drinks_tracker.png" alt="Drinks Tracker">
                         <h2>Drinks Tracker</h2>
                     </header>
-                    <p>Drinks Tracker allows you to search a huge list of nearly 4000 drinks and easily add drinks to track
-                        your Blood Alcohol Content (BAC) percentage. </p>
+                    <p>Drinks Tracker allows you to search a list of nearly 4,000 drinks and easily add drinks to track your Blood Alcohol Content (BAC) percentage.</p>
                     <a href="https://itunes.apple.com/app/apple-store/id1232956137?pt=118652912&ct=website&mt=8" style="display:inline-block;overflow:hidden;background:url(https://linkmaker.itunes.apple.com/assets/shared/badges/en-us/appstore-lrg.svg) no-repeat;width:135px;height:40px;background-size:contain;"></a>
-                    <br />
-                    <h3>Installed by 2,900+ users with 52,000+ impressions</h3>
                     <br /><br />
-                    <img class="image web" style="max-width:200px" src="images/dt.jpg" alt="Drinks Tracker">
-                    <img class="image web" style="max-width:200px" src="images/dt-2.jpg" alt="Drinks Tracker">
-                    <img class="image web" style="max-width:200px" src="images/dt-3.jpg" alt="Drinks Tracker">
-                    <img class="image web" style="max-width:200px" src="images/dt-4.jpg" alt="Drinks Tracker">
-                    <img class="image web" style="max-width:200px" src="images/dt-5.jpg" alt="Drinks Tracker">
+                    <h3>Installed by 3,800+ users with 101,000+ impressions</h3>
+                    <br /><br />
+                    <img class="image web" style="max-width:200px" src="images/screenshot1.png" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshot2.png" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshot3.png" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshot4.png" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshot5.png" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshot6.png" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshot7.png" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshot8.png" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshot9.png" alt="Drinks Tracker">
+                    <img class="image web" style="max-width:200px" src="images/screenshotW.png" alt="Drinks Tracker">
                     <br />
                     <br />
                     <h4>Features</h4>
                     <ul>
-                        <li>
-                            Search and easily add from nearly 4000 drinks
-                        </li>
-                        <li>Easily add custom drinks in a few taps (be sure to suggest them to the developer so that they can
-                            be added to the full list!)</li>
-                        <li>Get notifications when your BAC has reached 0.08% and 0%</li>
-                        <li>Customize your profile and choose between using the BAC and EBAC formula</li>
+                        <li>Search and easily add drinks. Favorite your frequent drinks for easy access!</li>
+                        <li>Track your BAC using the Today View widget and the Apple Watch app. Complications and Dynamic Notifications are coming soon!</li>
+                        <li>Easily add custom drinks and favorite them in a few taps.</li>
+                        <li>Get notifications when your BAC is at 0.08% and 0% and a reminder to add your next drink.</li>
+                        <li>Customize your profile to get an estimated BAC tailored to you!</li>
+                        <li>3D Touch the app icon to quickly add a drink and to see your BAC in the widget.</li>
+                        <li>Suggest drinks so that they can be added to the list!</li>
                     </ul>
                 </a>
             </article>
